tests/compile-fail/redefined.rs
#[macro_use]
extern crate bitflags;

bitflags! {
    pub struct Flags1 {
        const A = 1;
    }
}

bitflags! {
    pub struct Flags1 {
        const A = 1;
    }
}
