tests/compile-fail/redefined.stderr
error: no rules expected the token `{`
 --> tests/compile-fail/redefined.rs:5:23
  |
5 |     pub struct Flags1 {
  |                       ^ no rules expected this token in macro call

error: no rules expected the token `{`
  --> tests/compile-fail/redefined.rs:11:23
   |
11 |     pub struct Flags1 {
   |                       ^ no rules expected this token in macro call

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/compile-fail/redefined.rs:14:2
   |
14 | }
   |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/redefined.rs`
